# lancedb-go

./: CONTRIBUTING.md  Makefile  NATIVE_SEGMENTS.md  go.mod
.github/workflows/: ci.yml  native-segments-linux.yml  release.yml
examples/basic_crud/: basic_crud.go
examples/batch_operations/: batch_operations.go
examples/hybrid_search/: hybrid_search.go
examples/hybrid_vector_fts/: hybrid_vector_fts.go
examples/index_builder/: index_builder.go
examples/index_management/: index_management.go
examples/merge_insert/: merge_insert.go
examples/optimize_action/: optimize_action.go
examples/query_tuning/: query_tuning.go
examples/reranker/: reranker.go
examples/storage_configuration/: storage_configuration.go
examples/vector_search/: vector_search.go
examples/wait_for_index/: wait_for_index.go
include/: lancedb.h
pkg/contracts/: native_segments.go
pkg/internal/: connection.go  merge_insert.go  query.go  schema.go  table.go  table_native_segments.go  table_schema_evolve.go  table_time_travel.go
pkg/lancedb/: connect.go  connect_s3_test.go  schema.go
pkg/tests/: add_method_test.go  create_index_v2_test.go  data_operations_test.go  fts_test.go  get_all_indexes_test.go  hybrid_search_test.go  merge_insert_test.go  native_segments_test.go  optimize_action_test.go  prewarm_index_test.go  query_builder_test.go  query_tuning_test.go  reranker_test.go  schema_evolve_test.go  storage_options_test.go  table_select_test.go  table_test.go  time_travel_test.go  update_expr_test.go  wait_for_index_test.go
rust/: Cargo.toml  build.rs  cbindgen.toml
rust/src/: data.rs  ffi.rs  index.rs  lib_simple.rs  native_segments.rs  schema_evolve.rs  table.rs
scripts/: build-native.sh  download-artifacts.sh
